# guess_language

./: .gitignore  README.rst  generate_data.py  generate_trigrams.py  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: ci.yml
guess_language/: __init__.py  __main__.py  guess_language.py
guess_language/data/: __init__.py
guess_language/data/models/: af.py  ar.py  az.py  bg.py  ca.py  ceb.py  cs.py  cy.py  da.py  de.py  en.py  eo.py  es.py  et.py  eu.py  fa.py  fi.py  fr.py  ha.py  haw.py  hi.py  hr.py  hu.py  id.py  is.py  it.py  kk.py  ky.py  la.py  lt.py  lv.py  mk.py  mn.py  nb.py  ne.py  nl.py  nr.py  nso.py  pl.py  ps.py  (+26 more)
tests/: test_guess_language.py
